refactor: adapting code for local usage

--- a/views/articles/article.ejs
+++ b/views/articles/article.ejs
@@ -19,7 +19,7 @@
 
     <div class="buttons-container">
       <a class="button back" href="/">All Articles</a>
-      <a class="button edit" href="/articles/edit/<%= article.slug %>">Edit</a>
+      <a class="button edit" href="/articles/edit/<%= article.id %>">Edit</a>
     </div>
 
     <p class="content">
